engine-bench-harbor/jobs/2026-01-22__15-59-10/df-001-ampharos__rUPGqfq/verifier/test-stdout.txt
=== EngineBench Verifier ===
Working directory: /app
Card path: /app/src/df/cards/df_001_ampharos.rs

Injecting eval tests from /tests/df_001_ampharos_eval.rs

=== Running cargo check ===
    Updating crates.io index
 Downloading crates ...
  Downloaded getrandom v0.2.17
  Downloaded cfg-if v1.0.4
  Downloaded tcg_rules_ex v0.1.0
  Downloaded itoa v1.0.17
  Downloaded rand_chacha v0.3.1
  Downloaded rand_core v0.6.4
  Downloaded zmij v1.0.13
  Downloaded ppv-lite86 v0.2.21
  Downloaded unicode-ident v1.0.22
  Downloaded serde_derive v1.0.228
  Downloaded tcg_core v0.1.0
  Downloaded serde v1.0.228
  Downloaded rand v0.8.5
  Downloaded proc-macro2 v1.0.105
  Downloaded serde_json v1.0.149
  Downloaded memchr v2.7.6
  Downloaded serde_core v1.0.228
  Downloaded quote v1.0.43
  Downloaded thiserror-impl v1.0.69
  Downloaded zerocopy v0.8.33
  Downloaded thiserror v1.0.69
  Downloaded syn v2.0.114
  Downloaded libc v0.2.180
   Compiling proc-macro2 v1.0.105
   Compiling unicode-ident v1.0.22
   Compiling quote v1.0.43
   Compiling serde_core v1.0.228
   Compiling libc v0.2.180
   Compiling syn v2.0.114
   Compiling serde v1.0.228
   Compiling zerocopy v0.8.33
   Compiling serde_derive v1.0.228
    Checking cfg-if v1.0.4
    Checking getrandom v0.2.17
   Compiling zmij v1.0.13
    Checking ppv-lite86 v0.2.21
    Checking rand_core v0.6.4
   Compiling serde_json v1.0.149
   Compiling thiserror v1.0.69
    Checking rand_chacha v0.3.1
   Compiling thiserror-impl v1.0.69
    Checking itoa v1.0.17
    Checking memchr v2.7.6
    Checking rand v0.8.5
    Checking tcg_rules_ex v0.1.0
    Checking tcg_core v0.1.0
    Checking tcg_expansions v0.1.0 (/app)
    Finished `dev` profile [unoptimized + debuginfo] target(s) in 40.50s
Compile exit code: 0

=== Running cargo test ===
   Compiling serde_core v1.0.228
   Compiling libc v0.2.180
   Compiling cfg-if v1.0.4
   Compiling getrandom v0.2.17
   Compiling zerocopy v0.8.33
   Compiling serde v1.0.228
   Compiling ppv-lite86 v0.2.21
   Compiling rand_core v0.6.4
   Compiling zmij v1.0.13
   Compiling rand_chacha v0.3.1
   Compiling itoa v1.0.17
   Compiling memchr v2.7.6
   Compiling rand v0.8.5
   Compiling serde_json v1.0.149
   Compiling thiserror v1.0.69
   Compiling tcg_rules_ex v0.1.0
   Compiling tcg_core v0.1.0
   Compiling tcg_expansions v0.1.0 (/app)
error[E0425]: cannot find value `ABILITY_1_TEXT` in this scope
   --> src/df/cards/df_001_ampharos.rs:244:51
    |
244 |     #[test] fn eval_ability_1_text() { assert_eq!(ABILITY_1_TEXT, "Treat each Basic Pokémon and Evolution card in your deck, in your disc...
    |                                                   ^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find value `ATTACK_1_TEXT` in this scope
   --> src/df/cards/df_001_ampharos.rs:245:50
    |
245 |     #[test] fn eval_attack_1_text() { assert_eq!(ATTACK_1_TEXT, "Does 20 damage plus 10 more damage for each Pokémon you have in play tha...
    |                                                  ^^^^^^^^^^^^^ not found in this scope

For more information about this error, try `rustc --explain E0425`.
error: could not compile `tcg_expansions` (lib test) due to 2 previous errors

Test results: 0 passed / 0 total

=== Verifier complete ===
Score: 0.3
{
  "compile_ok": 1,
  "tests_passed": 0,
  "tests_total": 0,
  "pass_rate": 0.0,
  "score": 0.3
}
